--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="init()">
-    <header class="fixed-top w-100">
+    <header class="fixed-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand mx-auto" href="#home"></a>
@@ -33,10 +33,10 @@
                                 Szolgáltatások
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#services" data-index="0" onclick="getService(this)">Kozmetika</a></li>
-                              <li><a class="dropdown-item" href="#services" data-index="1" onclick="getService(this)">Manikűr</a></li>
-                              <li><a class="dropdown-item" href="#services" data-index="2" onclick="getService(this)">Fodrászat</a></li>
-                              <li><a class="dropdown-item" href="#services" data-index="3" onclick="getService(this)">Masszázs</a></li>
+                              <li><a class="dropdown-item" href="#services" data-id="1" onclick="getService(+this.dataset.id)">Kozmetika</a></li>
+                              <li><a class="dropdown-item" href="#services" data-id="2" onclick="getService(+this.dataset.id)">Manikűr</a></li>
+                              <li><a class="dropdown-item" href="#services" data-id="3" onclick="getService(+this.dataset.id)">Fodrászat</a></li>
+                              <li><a class="dropdown-item" href="#services" data-id="4" onclick="getService(+this.dataset.id)">Masszázs</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -63,10 +63,7 @@
 
 
         <section class="services" id="services">
-            <div class="services__container">
-                <div class="services__container-menu" id="serviceMenu"></div>
-                <div class="services__container-content" id="serviceContent"></div>
-            </div>
+            <div class="services__container" id="serviceContainer"></div>
         </section>
 
         <section id="galery">
@@ -81,7 +78,6 @@
     </main>
 
     <footer>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
