--- a/index.html
+++ b/index.html
@@ -149,16 +149,12 @@
 
         <section class="services" id="services">
             <h2 class="services__title">Szolgáltatások</h2>
-            <div class="services__content" id="serviceContent"></div>
+            <div class="services__container" id="serviceContent"></div>
         </section>
 
         <section id="contact">
             <h2 class="contact__title">CONTACT</h2>
         </section>
-
-        <!-- <section id="location">
-    
-            </section> -->
     </main>
 
     <footer>
