--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="./js/main.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>beYOUty Lounge</title>
 </head>
 
-<body onload="init()">
+<body>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -34,14 +33,10 @@
                                 Szolgáltatások
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#services" data-id="1"
-                                        onclick="getService(+this.dataset.id)">Kozmetika</a></li>
-                                <li><a class="dropdown-item" href="#services" data-id="2"
-                                        onclick="getService(+this.dataset.id)">Manikűr</a></li>
-                                <li><a class="dropdown-item" href="#services" data-id="3"
-                                        onclick="getService(+this.dataset.id)">Fodrászat</a></li>
-                                <li><a class="dropdown-item" href="#services" data-id="4"
-                                        onclick="getService(+this.dataset.id)">Masszázs</a></li>
+                                <li><a class="dropdown-item" href="#services" data-id="1">Kozmetika</a></li>
+                                <li><a class="dropdown-item" href="#services" data-id="2">Manikűr</a></li>
+                                <li><a class="dropdown-item" href="#services" data-id="3">Fodrászat</a></li>
+                                <li><a class="dropdown-item" href="#services" data-id="4">Masszázs</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -163,6 +158,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+    <script defer type="module" src="/js/main.js"></script>
 </body>
 
 </html>
