--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <li><a class="dropdown-item" href="#services" data-id="1"
                                         onclick="getService(+this.dataset.id)">Kozmetika</a></li>
                                 <li><a class="dropdown-item" href="#services" data-id="2"
-                                        onclick="getService(+this.dataset.id)">Műkörmös</a></li>
+                                        onclick="getService(+this.dataset.id)">Műköröm</a></li>
                                 <li><a class="dropdown-item" href="#services" data-id="3"
                                         onclick="getService(+this.dataset.id)">Fodrászat</a></li>
                                 <li><a class="dropdown-item" href="#services" data-id="4"
@@ -153,7 +153,7 @@
                 <a href="#services">
                     <ul class="services__menu row">
                         <li class="col-sm-6 col-lg-3" type="button" data-id="1" onclick="getService(+this.dataset.id)">Kozmetika</li>
-                        <li class="col-sm-6 col-lg-3" type="button" data-id="2" onclick="getService(+this.dataset.id)">Műkörmös</li>
+                        <li class="col-sm-6 col-lg-3" type="button" data-id="2" onclick="getService(+this.dataset.id)">Műköröm</li>
                         <li class="col-sm-6 col-lg-3" type="button" data-id="3" onclick="getService(+this.dataset.id)">Fodrászat</li>
                         <li class="col-sm-6 col-lg-3" type="button" data-id="4" onclick="getService(+this.dataset.id)">Masszázs</li>
                     </ul>
