contact cards update

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </section>
 
         <section class="contact container-fluid" id="contact">
-            <h3 class="contact__title text-center my-5">Kapcsolat</h3>
+            <h3 class="contact__title">Kapcsolat</h3>
         </section>
 
         <footer>
