location add to page

--- a/index.html
+++ b/index.html
@@ -166,6 +166,24 @@
             <h3 class="contact__title">Kapcsolat</h3>
         </section>
 
+        <section class="location container">
+            <div class="location__row row mb-5">
+                <h2 class="location__row__title text-center">Merre találsz minket?</h2>
+            </div>
+            <div class="location__row row">
+                <div class="location__row__col col-sm-6">
+                    <ul class="location__row__col-list">
+                        <li class="location__row__col-list-item">Cím: <a target="_blank" href="https://goo.gl/maps/ZLmGpk5dfBhtxuUx9">Szeged, Londoni körút 10 (Árkáddal szemben)</a></li>
+                        <li class="location__row__col-list-item">Facebook: <a target="_blank" href="https://www.facebook.com/profile.php?id=100062975421802">beYOUty Lounge</a></li>
+                        <li class="location__row__col-list-item"></li>
+                    </ul>
+                </div>
+                <div class="location__row__col col-sm-6">
+                    <iframe class="location__row__col-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2758.7946244729033!2d20.137223175846334!3d46.25431048037649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4744893c3d004c3d%3A0x45d72f97661a8ee5!2sBeYOUty%20Lounge!5e0!3m2!1sen!2shu!4v1691251263816!5m2!1sen!2shu" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
+
         <footer>
             <p>&copy; 2023 - beYOUty</p>
         </footer>
