--- a/index.html
+++ b/index.html
@@ -56,95 +56,13 @@
         </nav>
     </header>
 
-    <main class="container-fluid">
+    <main id="MainSection" class="container-fluid">
 
         <section class="home px-0" id="home">
             <!-- background image -->
             <div class="home__bg">
                 <div class="home__bg-filter"></div>
             </div>
-            <svg class="home__logo" xmlns:mydata="http://www.w3.org/2000/svg" version="1.1"
-                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="130.08786279349803 114.99999999999999 289.824274413004 240">
-                <g fill="#e56db1" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                    stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
-                    font-family="none" font-weight="none" font-size="none" text-anchor="none"
-                    style="mix-blend-mode: normal">
-                    <g
-                        data-paper-data="{&quot;isGlobalGroup&quot;:true,&quot;bounds&quot;:{&quot;x&quot;:130.08786279349803,&quot;y&quot;:114.99999999999999,&quot;width&quot;:289.824274413004,&quot;height&quot;:240}}">
-                        <g data-paper-data="{&quot;isSecondaryText&quot;:true}">
-                            <path d="M154.43399,311.28495h-11.51272v-22.05708h-3.40719v25.10562h14.91991z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;L&quot;,&quot;glyphIndex&quot;:0,&quot;firstGlyphOfWord&quot;:true,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M179.57293,301.74481c0,7.17303 4.41142,13.01906 11.83551,13.01906c7.42409,0 11.87137,-5.84602 11.87137,-13.01906c0,-7.13717 -4.48315,-12.94733 -11.87137,-12.94733c-7.42409,0 -11.83551,5.59497 -11.83551,12.94733zM183.05185,301.74481c0,-5.6667 3.0844,-10.00638 8.35659,-10.00638c5.27218,0 8.39245,4.87766 8.39245,10.00638c0,5.73843 -2.86921,10.07811 -8.39245,10.07811c-5.27218,0 -8.35659,-4.87766 -8.35659,-10.07811z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;O&quot;,&quot;glyphIndex&quot;:1,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M251.35662,304.25537c0,4.91353 -2.00845,7.53169 -6.06121,7.53169c-3.94517,0 -5.88189,-2.72575 -5.88189,-7.53169v-15.02751h-3.40719v15.56548c0,6.41987 3.47892,9.97052 9.28908,9.97052c5.63083,0 9.36081,-3.76584 9.36081,-10.11398v-15.42202h-3.2996z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;U&quot;,&quot;glyphIndex&quot;:2,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M302.56972,314.33349h4.44728v-25.10562h-3.22787v20.87353l-11.08234,-20.87353h-4.51901v25.10562h3.22787v-20.73007z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;N&quot;,&quot;glyphIndex&quot;:3,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M351.1486,303.71739h5.20045v5.48737c-1.21942,1.21942 -3.37133,2.58229 -6.02535,2.58229c-4.33969,0 -7.3165,-3.58652 -7.3165,-9.576c0,-6.74265 3.2996,-10.43677 7.81861,-10.43677c2.54643,0 4.51901,0.78903 6.52746,1.90085l1.25528,-2.83335c-2.15191,-1.18355 -4.48315,-2.04431 -7.60342,-2.04431c-7.24476,0 -11.47686,5.63083 -11.47686,13.62877c0,7.56755 4.19623,12.33762 10.00638,12.33762c2.90508,0 5.34391,-1.47047 7.02957,-2.94094v2.51056h3.01267v-13.30598h-8.42832z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;G&quot;,&quot;glyphIndex&quot;:4,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M391.78302,314.33349h15.06337v-2.94094h-11.65618v-8.71524h10.04225v-2.86921h-10.04225v-7.63928h11.65618v-2.94094h-15.06337z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;E&quot;,&quot;glyphIndex&quot;:5,&quot;lastGlyphOfWord&quot;:true,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                        </g>
-                        <g data-paper-data="{&quot;isPrimaryText&quot;:true}">
-                            <path
-                                d="M130.08786,275.76982v-37.22842h12.14526c3.88648,0 6.92919,0.83951 9.12812,2.51854c2.19893,1.67903 3.2984,4.19757 3.2984,7.55563c0,1.65346 -0.52843,3.1322 -1.58528,4.43622c-1.05685,1.30402 -2.4461,2.27138 -4.16774,2.90208c2.25007,0.47729 4.01859,1.57675 5.30556,3.2984c1.28697,1.72164 1.93046,3.72455 1.93046,6.00871c0,3.4092 -1.10373,6.01297 -3.31118,7.81132c-2.20745,1.79835 -5.20329,2.69753 -8.98749,2.69753zM135.12495,258.30621v13.52599h8.71902c2.28416,0 4.06547,-0.56678 5.34391,-1.70034c1.27845,-1.13356 1.91767,-2.74014 1.91767,-4.81975c0,-2.18189 -0.53269,-3.89501 -1.59806,-5.13936c-1.06537,-1.24436 -2.70605,-1.86653 -4.92203,-1.86653zM135.12495,254.36859h8.1565c1.87506,0 3.40067,-0.51564 4.57685,-1.54692c1.17617,-1.03128 1.76426,-2.46741 1.76426,-4.30837c0,-2.01143 -0.63496,-3.51573 -1.90489,-4.51292c-1.26993,-0.99719 -3.09811,-1.49578 -5.48454,-1.49578h-7.10817z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;b&quot;,&quot;glyphIndex&quot;:0,&quot;firstGlyphOfWord&quot;:true,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M196.55866,258.51076h-17.0545v13.32143h19.66254v3.93762h-24.69962v-37.22842h24.41837v3.96319h-19.38128v12.04298h17.0545z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;e&quot;,&quot;glyphIndex&quot;:1,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M227.36075,257.46243l9.71621,-18.92104h5.75302l-13.06574,24.13711v13.09131h-5.01152v-13.42371l-12.86119,-23.80471h5.75302z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;Y&quot;,&quot;glyphIndex&quot;:2,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M286.2887,260.47957c0,4.55128 -1.41055,8.32696 -4.23166,11.32705c-2.82111,3.00009 -6.48173,4.50014 -10.98187,4.50014c-4.34672,0 -7.8795,-1.50005 -10.59834,-4.50014c-2.71883,-3.00009 -4.07825,-6.77578 -4.07825,-11.32705v-6.62236c0,-4.53423 1.35942,-8.30992 4.07825,-11.32705c2.71883,-3.01714 6.25161,-4.52571 10.59834,-4.52571c4.50014,0 8.16076,1.50431 10.98187,4.51292c2.82111,3.00862 4.23166,6.78856 4.23166,11.33984zM281.25161,253.80607c0,-3.4092 -0.92048,-6.20474 -2.76145,-8.38662c-1.84097,-2.18189 -4.31263,-3.27283 -7.415,-3.27283c-2.93191,0 -5.27147,1.09094 -7.01868,3.27283c-1.74721,2.18189 -2.62082,4.97743 -2.62082,8.38662v6.6735c0,3.44329 0.87361,6.25587 2.62082,8.43776c1.74721,2.18189 4.08677,3.27283 7.01868,3.27283c3.11941,0 5.59534,-1.08668 7.42779,-3.26004c1.83244,-2.17336 2.74866,-4.99021 2.74866,-8.45054z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;O&quot;,&quot;glyphIndex&quot;:3,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M331.92079,238.54139v25.23657c0,4.05694 -1.3168,7.15931 -3.95041,9.30711c-2.6336,2.14779 -6.07263,3.22169 -10.31708,3.22169c-4.09104,0 -7.41074,-1.07816 -9.95911,-3.23447c-2.54837,-2.15632 -3.82256,-5.25442 -3.82256,-9.29432v-25.23657h5.03709v25.23657c0,2.81259 0.80116,4.9476 2.40348,6.40503c1.60232,1.45743 3.71602,2.18615 6.3411,2.18615c2.76145,0 4.99021,-0.72872 6.68629,-2.18615c1.69608,-1.45743 2.54411,-3.59244 2.54411,-6.40503v-25.23657z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;U&quot;,&quot;glyphIndex&quot;:4,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M376.27443,242.50459h-11.96628v33.26523h-5.03709v-33.26523h-11.94071v-3.96319h28.94407z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;t&quot;,&quot;glyphIndex&quot;:5,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                            <path
-                                d="M404.44291,257.46243l9.71621,-18.92104h5.75302l-13.06574,24.13711v13.09131h-5.01152v-13.42371l-12.86119,-23.80471h5.75302z"
-                                data-paper-data="{&quot;glyphName&quot;:&quot;y&quot;,&quot;glyphIndex&quot;:6,&quot;lastGlyphOfWord&quot;:true,&quot;word&quot;:1}"
-                                fill="#e56db1" style="fill: rgb(255, 255, 255);"></path>
-                        </g>
-                        <g
-                            data-paper-data="{&quot;fillRule&quot;:&quot;nonzero&quot;,&quot;fillRuleOriginal&quot;:&quot;nonzero&quot;,&quot;isIcon&quot;:true,&quot;iconStyle&quot;:&quot;standalone&quot;,&quot;selectedEffects&quot;:{&quot;container&quot;:&quot;&quot;,&quot;transformation&quot;:&quot;rotate0;translate50&quot;,&quot;pattern&quot;:&quot;&quot;},&quot;bounds&quot;:{&quot;x&quot;:130.08786279349803,&quot;y&quot;:155.23613264152283,&quot;width&quot;:289.8242744130039,&quot;height&quot;:72.01260852517737},&quot;iconType&quot;:&quot;initial&quot;,&quot;initialText&quot;:&quot;bl&quot;,&quot;rawInitialId&quot;:625,&quot;suitableAsStandaloneIcon&quot;:true}">
-                            <path
-                                d="M275,181.12033c3.61388,-4.42991 6.99459,-10.14215 7.81062,-16.08755c1.63207,-11.89079 -13.28972,-12.24053 -22.38268,-4.89622c-7.57747,6.06198 -14.10575,15.50467 -18.06935,24.01475c-3.49729,7.22774 -6.29513,13.52287 -8.16035,20.63404c-9.67584,6.76144 -21.10034,7.46089 -32.758,6.87801c-18.76882,-0.93261 -44.53221,-7.81062 -62.485,0.11658c-4.08018,1.74864 -5.01279,2.91441 -8.3935,5.4791c-1.28234,1.74864 0.23315,3.61388 2.21495,2.68127c9.909,-7.81062 20.40089,-8.74323 32.758,-8.04378c20.98377,1.28234 47.91294,8.62666 67.49778,-2.33153l-0.46631,2.68127c-0.69946,4.89622 9.20954,6.99459 11.89079,2.91441h0.23315c0,-0.11658 0.11658,-0.23315 0.11658,-0.34973c2.21495,-2.09837 4.54649,-4.08018 7.11117,-5.59567c2.09837,-1.28234 4.19676,-2.56468 6.29513,-3.38071c1.39892,-0.58288 2.91441,-1.04919 4.31332,-1.16576c4.08018,-0.23315 5.82883,3.14756 5.4791,6.76144c0,0.34973 -0.11658,0.81603 -0.23315,1.16576l-5.9454,1.74864c-3.14756,0.93261 -9.09296,2.21495 -10.49188,5.9454c-1.39892,3.84703 2.56468,6.41171 6.06198,6.06198c4.66306,-0.46631 10.84162,-5.12937 13.17314,-8.85981c0.58288,-0.93261 1.04919,-1.86522 1.28234,-2.79783c6.29513,-1.86522 12.12396,-3.14756 18.3025,-6.29513c2.09837,-1.39892 0.46631,-4.08018 -1.74864,-3.03098c-5.4791,2.91441 -10.60845,4.54649 -15.97098,5.9454c0.23315,-5.12937 -3.26415,-9.909 -9.909,-10.14215c-4.66306,0 -10.25874,3.14756 -14.92179,6.64486l2.33153,-6.06198c9.79242,-5.4791 18.88538,-12.93999 25.06394,-20.63404zM265.32416,171.67764c3.96359,-5.24594 11.4245,-13.98918 13.8726,-9.55927c1.74864,3.14756 -3.61388,12.59026 -6.76144,16.67043c-4.66306,6.06198 -12.35711,12.70684 -20.40089,17.71962c3.61388,-8.74323 7.57747,-17.25333 13.28972,-24.8308zM255.18201,222.62156c-0.46631,-0.34973 -0.34973,-0.11658 -0.69946,-0.69946v-0.23315c0,-0.11658 0.11658,-0.11658 0.11658,-0.23315c1.86522,-2.56468 7.69405,-3.38071 10.84162,-4.54649c-2.79783,3.73044 -7.34432,7.11117 -10.25874,5.71225zM332.58878,210.03129c5.12937,-0.69946 10.60845,-0.69946 15.97098,-0.46631c18.76882,0.93261 44.53221,7.81062 62.485,-0.11658c4.08018,-1.74864 5.01279,-2.91441 8.3935,-5.4791c1.28234,-1.74864 -0.23315,-3.61388 -2.21495,-2.68127c-9.909,7.81062 -20.40089,8.74323 -32.758,8.04378c-16.08755,-0.93261 -35.55583,-5.24594 -52.69257,-2.68127c-7.11117,1.04919 -13.05657,5.36252 -15.8544,9.09296c-5.24594,7.11117 -14.22233,10.49188 -15.38809,0.11658c-0.34973,-2.68127 0.23315,-5.9454 1.04919,-8.74323l0.46631,-1.74864c12.59026,-4.19676 25.53024,-17.48647 32.52483,-28.32809c2.68127,-4.08018 4.19676,-9.67584 2.91441,-13.05657c-1.74864,-4.66306 -8.3935,-5.82883 -13.75603,-4.54649c-15.62125,3.61388 -30.65961,27.2789 -35.55583,43.48303c-2.09837,6.99459 -1.39892,12.82341 1.16576,16.90359c6.76144,10.95818 20.86719,9.32612 29.727,-1.86522c2.91441,-3.73044 8.74323,-7.22774 13.52287,-7.9272zM318.24987,176.69042c2.68127,-3.14756 11.4245,-13.52287 15.73782,-9.909c1.51549,1.28234 -2.68127,8.97639 -4.42991,11.4245c-5.71225,8.16035 -16.08755,18.41909 -25.76341,22.84899c3.84703,-8.97639 8.51008,-17.25333 14.45548,-24.36448z"
-                                data-paper-data="{&quot;isPathIcon&quot;:true}" fill="#e56db1" style="fill: #fff;">
-                            </path>
-                        </g>
-                        <g class="svg-border" stroke="#fff" stroke-width="0.3" fill-rule="nonzero">
-                            <path class="svg-border__inner"
-                                d="M190.14721,150.14721c11.072,-11.07204 23.78646,-19.64426 38.1434,-25.71667c14.86413,-6.28703 30.43392,-9.43054 46.70939,-9.43054c16.27501,0 31.8448,3.14351 46.70939,9.43054c14.35649,6.07209 27.07095,14.64431 38.1434,25.71667c11.07154,11.07154 19.64388,23.78601 25.71701,38.1434c2.24399,5.30538 4.08749,10.70073 5.53052,16.18603l-1.7503,-0.10599c-1.40154,-5.22713 -3.17266,-10.3712 -5.31336,-15.43222c-5.98784,-14.15733 -14.44132,-26.69555 -25.36043,-37.61466c-10.91911,-10.9188 -23.45733,-19.37232 -37.61466,-25.36057c-14.65681,-6.19938 -30.01066,-9.29907 -46.06156,-9.29907c-16.05045,0 -31.4043,3.09969 -46.06156,9.29907c-14.15733,5.98807 -26.69555,14.44159 -37.61466,25.36057c-10.91911,10.91911 -19.37259,23.45733 -25.36043,37.61466c-2.00982,4.75159 -3.69387,9.57639 -5.05214,14.4744l-1.73097,0.01731c1.39889,-5.12533 3.14889,-10.17184 5.24998,-15.13953c6.07268,-14.35694 14.64501,-27.07141 25.71701,-38.1434zM359.85279,319.85279c-11.07154,11.07154 -23.78601,19.64388 -38.1434,25.71701c-14.86322,6.2868 -30.43302,9.4302 -46.70939,9.4302c-16.27546,0 -31.84526,-3.1434 -46.70939,-9.4302c-14.35694,-6.07222 -27.07141,-14.64456 -38.1434,-25.71701c-0.21354,-0.21354 -0.42615,-0.42769 -0.63782,-0.64245l1.4954,0.13197l0.90674,-0.00966l0.06624,-0.0073c10.7645,10.60511 23.08473,18.84221 36.96068,24.7113c14.65681,6.1997 30.01066,9.29955 46.06156,9.29955c16.04999,0 31.40385,-3.09985 46.06156,-9.29955c14.02276,-5.93067 26.45739,-14.28092 37.30389,-25.05076l1.40815,-0.06038l1.03855,-0.04259c-0.31767,0.32468 -0.63746,0.64796 -0.95936,0.96986z"
-                                data-paper-data="{&quot;isLogoContainer&quot;:true}" fill="#fff">
-                            </path>
-                        </g>
-                    </g>
-                </g>
-            </svg>
-            <span class="home__left-top-tri"></span>
-            <span class="home__right-bottom-tri"></span>
         </section>
 
         <section class="services" id="services">
