page down indicator and fix the main banner size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./main.js"></script>
     <link rel="shortcut icon" href="/img/spa.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <title>beYOUty</title>
 </head>
 
 <body onload="init()">
@@ -60,9 +61,7 @@
 
         <section class="home px-0" id="home">
             <!-- background image -->
-            <div class="home__bg">
-                <div class="home__bg-filter"></div>
-            </div>
+            <div class="home__bg"></div>
         </section>
 
         <section class="services" id="services">
